2022-09-23  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke.rec (with_temp_ios): Removed as DONE.
	(casts from integral to array and from array to integral):
	Likewise.
	(Support for offline method definitions): New enhancement.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ios.pk: Do not use standard types.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/pk-table.pk: Do not use standard types.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/mbr.pk (MBR_CHS): Add computed field `cylinder'.
	* testsuite/poke.pickles/mbr-test.pk: Adapt accordingly.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/id3v1.pk: Convert to use computed fields.
	* testsuite/poke.pickles/id3v1-test.pk: Adapted accordingly.

2022-09-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Recognize token COMPUTED.
	* libpoke/pkl-ast.h (PKL_AST_STRUCT_TYPE_FIELD_COMPUTED_P): Define.
	(struct pkl_ast_struct_type_field): New field computed_p.
	(struct pkl_ast_type): New field `ncfield' for struct types.
	(PKL_AST_TYPE_S_NCFIELD): Define.
	* libpoke/pkl-ast.c (pkl_ast_print_1): Print the computed_p
	attribute of struct type fields.
	(pkl_ast_sizeof_type): Do not count computed fields for the size
	of the struct.
	(pkl_ast_dup_type): Duplicate computed flag in struct type fields.
	(pkl_ast_type_mappable_p): Do not include computed fields in
	determining whether a struct type is mappable.
	(pkl_ast_type_is_complete): Do not include computed fields in
	determining whether a struct type is complete.
	(pkl_ast_type_is_complete): Likewise for union types.
	(pkl_type_append_to): Append `computed' for computed fields in
	type descriptors.
	* libpoke/pkl-tab.y: New token COMPUTED.
	(struct_type_computed_field): New rule.
	(struct_type_elem_list): Add struct_type_computed_field as an
	alternative.
	* libpoke/pkl-anal.c (pkl_anal2_ps_type_struct): adapt to computed
	fields.
	* libpoke/pkl-trans.c (pkl_trans1_ps_type_struct): Do not include